[gd_scene load_steps=5 format=3 uid="uid://dhgky4w5olwah"]

[ext_resource type="Script" uid="uid://clhhi3y46xvh5" path="res://scripts/ui/merchant_ui.gd" id="1_sd0pw"]
[ext_resource type="Texture2D" uid="uid://dfdra7gnx78gv" path="res://assets/sprites/rabbit_portrait.png" id="2_portrait"]

[sub_resource type="LabelSettings" id="LabelSettings_j7bd3"]
font_size = 32
font_color = Color(1, 0.6862745, 0.1882353, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sti4h"]
font_size = 20
font_color = Color(0.8546415, 0.4129259, 0.15518662, 1)

[node name="MerchantUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_sd0pw")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 65.0
offset_top = 65.0
offset_right = -135.0
offset_bottom = 343.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5647059)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Portrait" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(230, 230)
layout_mode = 2
texture = ExtResource("2_portrait")
expand_mode = 1
stretch_mode = 5

[node name="RightSide" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="DialogueLabel" type="Label" parent="Panel/HBoxContainer/RightSide"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "..."
label_settings = SubResource("LabelSettings_j7bd3")
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/HBoxContainer/RightSide"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="TalkButton" type="Button" parent="Panel/HBoxContainer/RightSide/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Talk"

[node name="TradeButton" type="Button" parent="Panel/HBoxContainer/RightSide/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Trade"

[node name="TradePanel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 65.0
offset_top = 65.0
offset_right = -135.0
offset_bottom = 443.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="TradePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5647059)

[node name="MarginContainer" type="MarginContainer" parent="TradePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TradePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="TradePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6862745, 0.1882353, 1)
theme_override_font_sizes/font_size = 32
text = "Merchant Offers"

[node name="OffersScrollContainer" type="ScrollContainer" parent="TradePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OffersContainer" type="VBoxContainer" parent="TradePanel/MarginContainer/VBoxContainer/OffersScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ErrorLabel" type="Label" parent="TradePanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Error message here"
label_settings = SubResource("LabelSettings_sti4h")
autowrap_mode = 2

[node name="BackButton" type="Button" parent="TradePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Back"
